--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,9 @@
 spring.devtools.restart.enabled=true
-logging.level.org.springframework=trace
+#logging.level.org.springframework=error
+spring.datasource.url=jdbc:mysql://localhost:3306/learningpath
+spring.datasource.username=root
+#spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format-sql=true
