--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.devtools.restart.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/learningpath
 spring.datasource.username=root
 #spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format-sql=true
+#spring.jpa.properties.hibernate.format-sql=true
