--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+### application.properties ###
+!**/src/main/resources/application.properties
+!**/src/main/resources/application-dev.properties
+!**/src/main/resources/application-prod.properties
+
 ### STS ###
 .apt_generated
 .classpath
