--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ target/
 
 
 ### application.properties ###
-!**/src/main/resources/application.properties
-!**/src/main/resources/application-dev.properties
-!**/src/main/resources/application-prod.properties
+src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
 
 ### STS ###
 .apt_generated
